# caldera

./: .gitignore  CMakeLists.txt  CODE_STYLE.md
demo/: CMakeLists.txt
demo/res/shaders/metal/: final.metal
demo/src/: game.c  game.h  main.c
games/dungeon_crawler/: CMakeLists.txt
games/dungeon_crawler/res/shaders/metal/: g_buffer.metal
games/dungeon_crawler/src/: animator.c  animator.h  custom_components.h  game.c  game.h  main.c
games/dungeon_crawler/src/systems/: facing_system.c  facing_system.h  player_system.c  player_system.h
games/so_far_away/: CMakeLists.txt
games/so_far_away/src/: game.c
res/shaders/metal/: g_buffer.metal  general.metal  triangle.metal
src/: main.c  main.cpp  test.c
src/caldera/: defines.h
src/caldera/containers/: bitset.c  bitset.h  darray.c  darray.h  sparse_set.c  sparse_set.h
src/caldera/ecs/: components.c  components.h  ecs.c  ecs.h
src/caldera/ecs/systems/: animation_system.c  animation_system.h  render_system.c  render_system.h
src/caldera/graphics/backend/: graphics_context.h  index_buffer.h  renderer_backend.h  texture.h  vertex_buffer.h
src/caldera/graphics/frontend/: font.c  font.h  renderer.c  renderer.h  sprite.c  sprite.h  text.h
src/caldera/graphics/metal/: cocoa_adapter.mm  mtl_graphics_context.cpp  mtl_graphics_context.hpp  mtl_index_buffer.cpp  mtl_renderer_backend.cpp  mtl_texture.cpp  mtl_vertex_buffer.cpp
src/caldera/graphics/vulkan/: vk_graphics_context.c  vk_index_buffer.c  vk_renderer.c  vk_renderer_backend.c  vk_texture.c  vk_vertex_buffer.c
src/caldera/math/: affine.c  affine.h  cam.c  cam.h  ivec2.c  ivec2.h  mat4.c  mat4.h  types.h  util.c  util.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/caldera/utils/: dynamic_array.c  dynamic_array.h  files.c  files.h  log.c  log.h  panic.c  panic.h  time.c  time.h  utf8.c  utf8.h
src/caldera/window/: input.h  window.c  window.h
src/cpp_module/: module.cpp  module.hpp
src/game/: game.c  game.h
src/graphics/api/: graphics_context.h  index_buffer.h  renderer.h  vertex_buffer.h
src/graphics/backend/: renderer_backend.h  texture.h
src/graphics/frontend/: renderer.c  renderer.h  sprite.c  sprite.h
src/graphics/metal/: cocoa_adapter.hpp  cocoa_adapter.mm  mtl_context.cpp  mtl_context.hpp  mtl_graphics_context.cpp  mtl_graphics_context.hpp  mtl_index_buffer.cpp  mtl_renderer.cpp  mtl_renderer.hpp  mtl_renderer_backend.cpp  mtl_texture.cpp  mtl_vertex_buffer.cpp
src/graphics/vulkan/: vk_graphics_context.c  vk_graphics_context.h  vk_index_buffer.c  vk_renderer.c  vk_renderer.h  vk_vertex_buffer.c  vulkan_test.c  vulkan_test.h
src/math/: affine.c  cam.c  cam.h  mat4.c  mat4.h  util.c  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/utils/: utils.c
src/window/: window.c  window.h
src/window/glfw/: glfw_window.c  glfw_window.h
src/window/macos/: macos_window.cpp  macos_window.hpp
src/window/macos/control/: app_delegate.cpp  app_delegate.hpp  view_delegate.cpp  view_delegate.hpp
src/window/macos/view/: mtl_renderer.cpp  mtl_renderer.hpp
tests/: CMakeLists.txt  bitset.c  darray.c  sparse_set.c
